assets/css/zerotohero.scss
/* ... */
/* for the definition column */
.show-level-1 .study-sheet-table [data-level="PreA1"]:not(.seen),
.show-level-1 .study-sheet-table [data-level="Pre-A1"]:not(.seen),
.show-level-2 .study-sheet-table [data-level="A1"]:not(.seen),
.show-level-3 .study-sheet-table [data-level="A2"]:not(.seen),
.show-level-4 .study-sheet-table [data-level="B1"]:not(.seen),
.show-level-5 .study-sheet-table [data-level="B2"]:not(.seen),
.show-level-6 .study-sheet-table [data-level="C1"]:not(.seen),
.show-level-outside .study-sheet-table [data-level="C2"]:not(.seen):not(.common):not(.low-rank) {
  color: #b74900 !important;
}

.word-square {
  padding: 4px;
  font-size: 10px;
  width: 30px;
  height: 30px;
  overflow: hidden;
  line-height: 10px;
  text-align: center;
  display: flex;
  float: left;
  justify-content: center;
  align-items: center;
  border: 1px solid white;
  font-weight: bold;
}

.tabs {
  white-space: nowrap;
  overflow: scroll;
  overflow-y: hidden;
  a svg,
  a i {
    margin-right: 0.5rem;
  }
}

.tab {
  padding: 0.5rem 1rem;
  border-radius: 0.3rem 0.3rem 0 0;
  display: inline-block;
  margin-right: 0.2rem;
  border: none;
}

.zerotohero-wide {
  .content-panes {
    display: flex;
    flex-wrap: nowrap;
    .content-pane-left {
      width: 21rem;
      background: #ffffffdd;
      backdrop-filter: blur(20px);
      height: 100vh;
      position: sticky;
      top: 0;
    }
    .content-pane-right {
      background: white;
      padding: 0 1rem;
      width: 100%;
      overflow: hidden;
    }
  }
}

.play-button-wrapper {
  .play-button {
    background: rgba(0, 0, 0, 0.3);
    color: rgba(255, 255, 255, 0.384);
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    position: absolute;
    top: calc(50% - 20px);
    left: calc(50% - 20px);
    border-radius: 100%;
    width: 40px;
    height: 40px;
    transform: scale(1.5);
    z-index: 1;
    opacity: 0;
  }
  &:hover .play-button {
    color: rgba(255, 255, 255, 0.616);
    transform: scale(1.8);
    transition: 200ms ease-in-out;
    opacity: 1;
  }
}

.home-card {
  background-color: hsla(0deg 100% 100% / 0.7);
  border: 1px solid rgba(255, 255, 255, 0.9);
  backdrop-filter: blur(15px);
  -webkit-backdrop-filter: blur(15px);
  padding: 2rem;
  border-radius: 1rem;
  box-shadow: 0 10px 30px rgba(68, 75, 134, 0.2);
  height: 100%;
  color: #444;
  ::v-deep .language-list .language-list-item a {
    color: #000000cc !important;
  }
}

.main {
  background: white;
}

.zerotohero-wide {
  .main {
    padding: 0 3rem;
  }
}

.main-dark {
  background-color: hsl(0deg 0% 0% / 72%);
  backdrop-filter: blur(20px);
  -webkit-backdrop-filter: blur(20px);
  color: hsla(0deg 100% 100% / 0.8);
  &.main-dark-performant {
    background-color: black;
    backdrop-filter: none;
    -webkit-backdrop-filter: none;
  }
}

.search-subs,
.compare-search-subs {
  .playlist-dropdown {
    .dropdown-menu {
      margin-top: 2.2rem;
      border: none;
      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
      overflow: scroll;
      max-height: calc(100vh - 3rem);
      max-width: calc(100% - 3rem);
      transform: translate3d(1.5rem, 8rem, 1.5rem) !important;
      .current {
        .dropdown-item {
          background: #f3f3f3;
        }
      }
      .dropdown-item {
        max-width: 98vw;
        white-space: normal;
        padding: 0.25rem 1rem;
        color: #666;
        &:hover {
          background-color: #f3f3f3;
          cursor: pointer;
        }
      }

      .hit-thumb {
        width: calc(0.2rem * 16);
        height: calc(0.2rem * 9);
        object-fit: cover;
        margin-right: 1rem;
      }
    }
  }
}

.bg-gradient-0 {
  background-color: #faaca8;
  background-image: linear-gradient(45deg, #faaca8 0%, #ddd6f3 100%);
}

.bg-gradient-1 {
  background-color: #4158d0;
  background-image: linear-gradient(43deg, #4158d0 0%, #c850c0 46%, #ffcc70 100%);
}
.bg-gradient-2 {
  background-color: #0093e9;
  background-image: linear-gradient(43deg, #0093e9 0%, #80d0c7 100%);
}
.bg-gradient-3 {
  background-color: #0093e9;
  background-image: linear-gradient(43deg, #0093e9 0%, #80d0c7 100%);
}
.bg-gradient-4 {
  background-color: #0093e9;
  background-image: linear-gradient(43deg, #0093e9 0%, #80d0c7 100%);
}
.bg-gradient-5 {
  background-color: #0093e9;
  background-image: linear-gradient(43deg, #0093e9 0%, #80d0c7 100%);
}
.bg-gradient-6 {
  background-color: #ffe53b;
  background-image: linear-gradient(43deg, #ffe53b 0%, #ff2525 74%);
}
.bg-gradient-7 {
  background-color: #fbda61;
  background-image: linear-gradient(43deg, #fbda61 0%, #ff5acd 100%);
}
.bg-gradient-8 {
  background-color: #fbda61;
  background-image: linear-gradient(43deg, #fbda61 0%, #ff5acd 100%);
}
.bg-gradient-9 {
  background-color: #faaca8;
  background-image: linear-gradient(45deg, #faaca8 0%, #ddd6f3 100%);
}

.gradient-text {
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent; 
  -moz-text-fill-color: transparent;
}

.admin-remove-button,
.admin-hide-button {
  background: none;
  border: none;
  padding: 0;
  color: #88888855;
  &:hover {
    background: none;
    color: #88888877;
  }
}

